[package]
name = "ravana"
version = "0.1.0"
authors = ["CyanideForBreakfast <dwivedi.utkarsh01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libnotcurses-sys = { git = "https://github.com/dankamongmen/libnotcurses-sys" }
libnotcurses-sys = "= 3.5.0"
reqwest = { version = "0.11", default-features = false, features = [
"rustls-tls",
"json"
] }
url = "2.2.2"
anyhow = "1.0.49"
thiserror = "1.0.30"
toml = "0.5.8"
filedescriptor = "0.8.1"
serde = "1.0.130"
log = "0.4.14"
radix_trie = "0.2.1"
phf = { version = "0.9", features = ["macros"] }
sequence_trie = "*"
env_logger = "0.9.0"
serial_test = "0.6.0"
nix = "0.23.1"
tokio = { version = "1.19.2", features = ["rt"] }
# ravana_reddit_api = { git = "https://github.com/Cyanide4Dinner/ravana_reddit_api", branch = "refactoring/0.2.0-restructure" }
ravana_reddit_api = { path = "../ravana_reddit_api" }

[dev-dependencies]
# libnotcurses-sys = {version = "2.4.5", path = "../../Repos/libnotcurses-sys"}
enum-iterator = "0.7.0"
